--- a/cluster/230-media-service/radarr/helm-release.yaml
+++ b/cluster/230-media-service/radarr/helm-release.yaml
@@ -30,6 +30,9 @@ spec:
 
     env:
       TZ: "Asia/Shanghai"
+      UID: "1000"
+      GID: "1000"
+      UMASK: 002
 
     persistence:
       config:
