--- a/cluster/230-media-service/prowlarr/helm-release.yaml
+++ b/cluster/230-media-service/prowlarr/helm-release.yaml
@@ -25,8 +25,8 @@ spec:
       location: "home"
 
     image:
-      repository: linuxserver/prowlarr
-      tag: develop-version-1.3.2.2984
+      repository: ghcr.io/onedr0p/prowlarr-develop
+      tag: 1.4.1.3258
 
     env:
       TZ: "Asia/Shanghai"
