--- a/cluster/010-management-tools/kubesphere/kustomization.yaml
+++ b/cluster/010-management-tools/kubesphere/kustomization.yaml
@@ -2,7 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - https://github.com/kubesphere/ks-installer/releases/download/v3.3.0/kubesphere-installer.yaml
-  - https://github.com/kubesphere/ks-installer/releases/download/v3.3.0/cluster-configuration.yaml
-patchesStrategicMerge:
+  # https://github.com/kubesphere/ks-installer/releases/download/v3.3.2/kubesphere-installer.yaml
+  - kubesphere-installer.yaml
+  # https://github.com/kubesphere/ks-installer/releases/download/v3.3.2/cluster-configuration.yaml
   - cluster-configuration.yaml
+patchesStrategicMerge:
+  - my-cluster-configuration.yaml
