--- a/cluster/000-base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/000-base/flux-system/charts/helm/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - influxdata-charts.yaml
   - itzg-charts.yaml
   - jetstack-charts.yaml
+  - juicefs-charts.yaml
   - k8s-at-home-charts.yaml
   - kasten-charts.yaml
   - metallb-charts.yaml
