--- a/cluster/220-software-development/sentry/helm-release.yaml
+++ b/cluster/220-software-development/sentry/helm-release.yaml
@@ -23,6 +23,26 @@ spec:
 #    ingress:
     #      enabled: true
     #      regexPathStyle: traefik
+    #    ingress:
+    #      enabled: false
+    #      # If you are using traefik ingress controller, switch this to 'traefik'
+    #      # if you are using AWS ALB Ingress controller, switch this to 'aws-alb'
+    #      # if you are using GKE Ingress controller, switch this to 'gke'
+    #      regexPathStyle: nginx
+    #      # If you are using AWS ALB Ingress controller, switch to true if you want activate the http to https redirection.
+    #      alb:
+    #        httpRedirect: false
+    #      # annotations:
+    #      #   If you are using nginx ingress controller, please use at least those 2 annotations
+    #      #   kubernetes.io/ingress.class: nginx
+    #      #   nginx.ingress.kubernetes.io/use-regex: "true"
+    #      #
+    #      # hostname:
+    #      # additionalHostNames: []
+    #      #
+    #      # tls:
+    #      # - secretName:
+    #      #   hosts:
     user:
       email: "${SECRET_SENTRY_ADMIN_EMAIL}"
       password: "${SECRET_SENTRY_ADMIN_PASSWORD}"
@@ -31,7 +51,7 @@ spec:
         replicaCount: 1
     system:
       adminEmail: "${SECRET_SENTRY_ADMIN_EMAIL}"
-      url: "sentry.${SECRET_DOMAIN}"
+      url: "https://sentry.${SECRET_DOMAIN}"
 #    nginx:
 #      ingress:
 #        enabled: true
